--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,14 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "electrolinux/phpquery": "^0.9.6",
-        "miloschuman/yii2-highcharts-widget": "^7.0"
+        "miloschuman/yii2-highcharts-widget": "^7.0",
+        "facebook/graph-sdk": "^5.7",
+        "facebook/php-ads-sdk": "^3.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
         "yiisoft/yii2-gii": "~2.0.0",
         "yiisoft/yii2-faker": "~2.0.0",
-
         "codeception/base": "~2.3.0",
         "codeception/verify": "~0.4.0",
         "codeception/specify": "~0.4.6"
